--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "typescript": "^5.2.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@t3headless/nuxt-typo3": "^2.0.0-alpha.23"
   }
 }
